--- a/mybook/_config.yml
+++ b/mybook/_config.yml
@@ -3,7 +3,7 @@
 
 title: My sample book
 author: Intan Aulia Majid
-logo: logo.png
+logo: images/logo.png
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
