--- a/mybook/_config.yml
+++ b/mybook/_config.yml
@@ -1,8 +1,7 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: My sample book
-author: Intan Aulia Majid
+title: Pendata
 logo: images/logo.png
 
 # Force re-execution of notebooks on each build.
