--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -26,6 +26,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          pip install -r requirements.txt 
           pip install jupyter-book ghp-import
 
       - name: Build Jupyter Book
