--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt  # Instal semua dependensi dari requirements.txt
+          pip install -r $BOOK_ROOT/requirements.txt  # Instal semua dependensi dari requirements.txt
           pip install jupyter-book ghp-import  # Pastikan jupyter-book dan ghp-import tetap terinstal
 
       - name: Build Jupyter Book
