--- a/mybook/requirements.txt
+++ b/mybook/requirements.txt
@@ -1,12 +1,12 @@
 jupyter-book
-matplotlib==3.10.0
-numpy==1.26.1
-pandas==2.2.2
-scikit-learn==1.3.2
-seaborn==0.13.0
+matplotlib
+numpy
+pandas
+scikit-learn
+seaborn
 tqdm
 nltk
 streamlit
 plotly
 xgboost
-imbalanced-learn==0.13.0
+imbalanced-learn
