--- a/mybook/requirements.txt
+++ b/mybook/requirements.txt
@@ -1,7 +1,12 @@
-streamlit==1.36.0
-pandas==2.2.2
-numpy==1.26.1
-matplotlib==3.10.0
-seaborn==0.13.0
-scikit-learn==1.6.1
-imbalanced-learn==0.13.0
+jupyter-book
+matplotlib
+numpy
+pandas
+scikit-learn
+seaborn
+tqdm
+nltk
+streamlit
+plotly
+xgboost
+imbalanced-learn
