--- a/mybook/requirements.txt
+++ b/mybook/requirements.txt
@@ -1,7 +1,7 @@
 streamlit
-pandas==1.5.3
+pandas
 numpy
 matplotlib
 seaborn
-scikit-learn==1.2.2
-imbalanced-learn==0.10.1
+scikit-learn==1.5.0
+imbalanced-learn==0.12.3
