--- a/mybook/requirements.txt
+++ b/mybook/requirements.txt
@@ -1,7 +1,7 @@
-streamlit
+scikit-learn==1.3.2
+imbalanced-learn==0.11.0
 pandas
 numpy
 matplotlib
 seaborn
-scikit-learn
-imbalanced-learn==0.11.0
+streamlit
