--- a/mybook/requirements.txt
+++ b/mybook/requirements.txt
@@ -1,7 +1,7 @@
-streamlit
-pandas
-numpy
-matplotlib
-seaborn
-scikit-learn==1.3.2
-imbalanced-learn==0.12.2
+streamlit>=1.25.0
+pandas>=1.5
+numpy>=1.23
+matplotlib>=3.5
+seaborn>=0.12
+scikit-learn>=1.2
+imbalanced-learn>=0.10
