--- a/mybook/requirements.txt
+++ b/mybook/requirements.txt
@@ -1,7 +1,7 @@
-streamlit
-pandas
-numpy
-matplotlib
-seaborn
+streamlit==1.35.0
+pandas==2.1.4
+numpy==1.24.4
+matplotlib==3.7.2
+seaborn==0.12.2
 scikit-learn==1.2.2
 imbalanced-learn==0.10.1
